# bader-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  release_checklist.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: analysis.rs  arguments.rs  atoms.rs  density.rs  errors.rs  grid.rs  io.rs  lib.rs  main.rs  methods.rs  progress.rs  utils.rs  voronoi.rs  voxel_map.rs
src/io/: cube.rs  output.rs  reader.rs  vasp.rs
tests/: cube.rs  vasp.rs
tests/vasp/: CHGCAR_ncl  CHGCAR_no_spin  CHGCAR_spin  CHG_ncl  CHG_no_spin  CHG_spin
