[package]
name = "bader"
version = "0.4.5"
authors = ["Adam Kerrigan <ak1014@york.ac.uk>"]
edition = "2021"
rust-version = "1.64.0"
description = "Grid based Bader charge partitioning"
license = "MIT"
readme = "README.md"
repository = "https://github.com/adam-kerrigan/bader-rs"
categories = ["command-line-utilities", "science"]
keywords = ["Analysis", "Materials_Science", "Physics", "Chemistry", "Multi-Threading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.4"
clap = {version = "4.4.1", features = ["cargo"]}
indicatif = "0.17.6"
atomic-counter = "1.0.1"
num_cpus = "1.13.0"
crossbeam-utils = "0.8.12"
rustc-hash = "1.1.0"
