[package]
name = "bader"
version = "0.4.8"
authors = ["Adam Kerrigan <ak1014@york.ac.uk>"]
edition = "2021"
rust-version = "1.56.1"
description = "Multi-threaded Bader Charge Analysis"
license = "MIT"
readme = "README.md"
repository = "https://github.com/adam-kerrigan/bader-rs"
categories = ["command-line-utilities", "science"]
keywords = ["Analysis", "Materials_Science", "Physics", "Chemistry", "Multi-Threading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
crossbeam-utils = "0.8.18"
rustc-hash = "1.1.0"
